--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
-*.exe
+# PyInstaller build artifacts
 dist/
+build/
+*.exe
+*.spec
+
+# Python cache
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# OS files
+.DS_Store
+Thumbs.db
